--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -56,7 +56,7 @@
                     <input type="checkbox"
                            name="subjects"
                            th:value="${subject.id}"
-                           th:checked="${#lists.contains(newUser.subjects, subject.id)}"/>
+                           th:checked="${#lists.contains(userSubjects, subject)}"/>
                     <span th:text="${subject.name}">Matematyka</span>
                 </label>
             </div>
